# cryptknox

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cryptknox/: Cli.py  Items.py  Storage.py  pyproject.toml
cryptknox/algorithm/: Aes.py  Generatepass.py
cryptknox/lib/: Arguments.py
