[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptknox"
description = "A light weight secure CLI tool for storing, retrieving, deleting, and generating encrypted passwords."
authors = [
    {name = "Sreejith", email = "sreejitharee123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
# 1. Tell setuptools that dependencies will be defined dynamically
dynamic = ["dependencies","version"]


# 2. Point to the requirements file
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "cryptknox.__version__"}


[project.scripts]
cryptknox = "cryptknox.Cli:main"

[project.urls]
Repository = "https://github.com/Sreejith-R-Mohan/cryptknox"