[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptknox"
version = "0.1.0"
description = "A light weight secure CLI tool for storing, retrieving, deleting, and generating encrypted passwords."
authors = [
    {name = "Sreejith", email = "sreejitharee123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
# 1. Tell setuptools that dependencies will be defined dynamically
dynamic = ["dependencies"]


# 2. Point to the requirements file
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.scripts]
fcryptx = "cryptknox.Cli:main"

[project.urls]
Repository = "https://github.com/Sreejith-R-Mohan/cryptknox"